# oct

./: .gitignore  README.md
Skin/: README.md
Skin/data/: 041-abs.txt  119-abs.txt  Tabulated Molar Extinction Coefficient for Hemoglobin in Water.txt  irvine68.txt  kou93b.txt  sullivan63.txt  wieliczka89.txt  zolotarev69.txt
Skin/data_prepare/: Lipid(9).txt
Skin/spectra/: cooper pig c oxidised.txt  cooper pig c reduced.txt  cope cyt b oxidised.txt  cope cyt b reduced.txt  cytoxidase_diff_odmMcm.txt  dum.txt  hb.txt  hb02.txt  lubber_vis_cytb_ox.txt  lubber_vis_cytb_red.txt  lubber_vis_cytc_ox.txt  lubber_vis_cytc_red.txt  matcher94_nir_water_37.txt  moody cyt aa3 oxidised.txt  moody cyt aa3 reduced.txt  water740_840_vhollis_2001_37.txt  water740_840_vhollis_2001_coeff.txt  water970_vhollis_2001_37.txt  water970_vhollis_2001_coeff.txt  z_adult_hb_450_630.txt  z_adult_hb_600_800.txt  z_adult_hbco_450_630.txt  z_adult_hbco_600_800.txt  z_adult_hbo2_450_630.txt  z_adult_hbo2_600_800.txt  z_adult_hi_450_630.txt  z_adult_hi_600_800.txt  z_adult_hi_700_1000.txt  z_adult_hicn_450_630.txt  z_adult_hicn_600_800.txt  z_adult_shb_450_630.txt  z_adult_shb_600_800.txt  z_fetal_hb_450_630.txt  z_fetal_hb_600_800.txt  z_fetal_hbco_450_630.txt  z_fetal_hbco_600_800.txt  z_fetal_hbo2_450_630.txt  z_fetal_hbo2_600_800.txt  z_fetal_hi_450_630.txt  z_fetal_hi_600_800.txt  (+1 more)
Wave/: CMakeLists.txt  requirements.txt
Wave/Data/Save/: Point_res.csv
Wave/Data/chromophorf/: Hb(2).txt  HbO2(2).txt  LipidCollagenAbsorptionСoefficient(11).txt  water(2).txt  water_2.txt
Wave/include/Solver/: Solver.h
Wave/include/Utils/: Call_Cpython.h  Converter.h  Defines.h  Grid.h
Wave/src/: CMakeWave.cpp  CMakeWave.h
Wave/src/Cpython/: Call_Cpython.cpp  appr.py  inv_laplace.py  pyqt.py  settings.json  test.py
Wave/src/Solver/: Solver.cpp
Wave/src/Utils/: Converter.cpp  Grid.cpp
video/: impulse.mkv  testPML.webm
